[project]
name = "langchain-agent-mlh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.49.1",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.0.10",
    "openai-agents>=0.3.3",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
]
